--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div id="jumbotron " class="jumbotron container-fluid">
 
 		<div class="row text-center text-inline">
-			<h2>Hello, I&quot;m<span class="name text-nowrap"> Shea Fitzek</span></h2>
+			<h2>Hello, I&#39;m<span class="name text-nowrap"> Shea Fitzek</span></h2>
 			<p id="description">Family Man . . . <span class="text-nowrap">Tech Enthusiast . . . </span> <span class="text-nowrap">Information Addict &</span></p>
 			<p class="font-effect-emboss ">Full-Stack <span class="text-nowrap">Web Developer</span> / <span class="text-nowrap">Software Engineer</span></p>
 		</div>
@@ -144,7 +144,7 @@
 
 			<div class="row container-fluid bg-3 text-center ">
 
-				<h3 class="text-center text-nowrap">Some of my work</h3><br>
+				<h3 class="text-center text-nowrap">Some Of My Work</h3><br>
 
 				<div class="row ">
 
@@ -230,10 +230,10 @@
 			<p>
 				<pre><code>
 <span class="code-tag">&lt;contact&gt;</span>
-	<span class="code-tag">&lt;name&gt;</span>Shea Fitzek<span class="code-tag">&lt;/name&gt;</span>
-	<span class="code-tag">&lt;title&gt;</span>Full-Stack Web Developer<span class="code-tag">&lt;/title&gt;</span>
-	<span class="code-tag">&lt;email&gt;</span><a href="#">me@mysite.com</a><span class="code-tag">&lt;/email&gt;</span>
-	<span class="code-tag">&lt;link&gt;</span><a href="#">mysite.com</a><span class="code-tag">&lt;/link&gt;</span>
+    <span class="code-tag">&lt;name&gt;</span>Shea Fitzek<span class="code-tag">&lt;/name&gt;</span>
+    <span class="code-tag">&lt;title&gt;</span>Full-Stack Web Developer<span class="code-tag">&lt;/title&gt;</span>
+    <span class="code-tag">&lt;email&gt;</span><a href="#">me@mysite.com</a><span class="code-tag">&lt;/email&gt;</span>
+    <span class="code-tag">&lt;link&gt;</span><a href="#">mysite.com</a><span class="code-tag">&lt;/link&gt;</span>
 <span class="code-tag">&lt;/contact&gt;</span>
 			</code></pre>
 			</p>
@@ -245,10 +245,10 @@
 			<p>
 				<pre><code>
 <span class="code-tag">#Shea_Fitzek </span>{
-	passion	 : <span class="code-tag">code</span>;
-	motivation: <span class="code-tag">high</span>;
-	knowledge : <span class="code-tag">vast</span>;
-	attitude	: <span class="code-tag">great</span>;
+    passion: <span class="code-tag">code</span>;
+    motivation: <span class="code-tag">high</span>;
+    knowledge: <span class="code-tag">vast</span>;
+    attitude: <span class="code-tag">great</span>;
 }
 			</code></pre>
 			</p>
@@ -260,7 +260,7 @@
 			<p>
 				<pre><code>
 if (<span class="code-tag">position</span>.isOpen() && <span class="code-tag">help</span>.isNeeded()) {
-	<span class="code-tag">searchDevs</span>({talented: <span class="code-tag">True</span>,aptitude: <span class="code-tag">100</span>});
+    <span class="code-tag">searchDevs</span>({talented: <span class="code-tag">True</span>, aptitude: <span class="code-tag">100</span>});
 }
 
 // Shea Fitzek
