--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 		<p>I have worked as a senior mechanical engineer without any formal education in the field. Accomplishing this proved to myself that I can do anything I set my mind to. I have experience with project management, working with and leading small and large
 			groups, as well as working on solo projects. I have a hunger for knowledge and a drive to prove myself in this arena.</p>
 
-		<p>Javascript has quickly become my passion and I currently concentrate on the MEAN stack while I also enjoy building cross platform apps with Electron. I consider myself a functional programmer and am open to learning any new languages, techniques and
-			technologies and I believe that the knowledge of programming principles that I have accumulated would make for a painless transition.</p>
+		<p>Javascript has quickly become my passion, but I am open to learning any new languages, techniques and
+			technologies and I believe that the knowledge of programming principles that I have accumulated thus far would make for a painless transition.</p>
 
 		<p>Thankyou for taking a look at my portfolio. Please contact me if you have any questions or need any further information.
 
